# dnd-35-charsheet

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  denispetrochenkov.md  index.html  styles.css
data/: sample_character.json
data/json/: classes.json  custom_items.json  feats.json  flaws.json  items.json  languages.json  races.json  skills.json  spells.json  weapons.json
js/: app.js  calculator.js  character.js  dataLoader.js  featChoices.js  featParser.js  pdfExport.js  storage.js
js/ui/: abilitiesTab.js  characterTab.js  classesTab.js  featsTab.js  gameLogTab.js  helpModal.js  infoModal.js  inventoryTab.js  skillsTab.js  spellsTab.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
