[package]
name = "dnd-35-charsheet"
version = "1.0.0"
description = "D&D 3.5 Character Sheet"
edition = "2021"

[lib]
name = "dnd_35_charsheet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
